# logchain

./: Cargo.toml  README.md
logs/: bash_log.txt
src/: main.rs
