[package]
name = "block_log"
version = "0.1.0"
authors = ["Abhishek Yadav <b4skyx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
